Add edit and delete button

--- a/templates/dashboard/blog/write_article.html
+++ b/templates/dashboard/blog/write_article.html
@@ -22,6 +22,7 @@
 
             <!-- Article Form -->
             <section class="py-5">
+                {% include 'dashboard/includes/alert.html' %}
 				<div class="pb-2">
 					<h4>Write A New Article</h4>
 				</div>
