--- a/templates/dashboard/blog/drafted_articles.html
+++ b/templates/dashboard/blog/drafted_articles.html
@@ -43,6 +43,7 @@
 			<section class="mb-4">
 				<!-- Section Title -->
 				{% if posts %}
+				{% include 'dashboard/includes/alert.html' %}
 				<div class="py-4">
 					<h4>List of Published Articles</h4>
 				</div>
