--- a/templates/dashboard/blog/published_articles.html
+++ b/templates/dashboard/blog/published_articles.html
@@ -42,6 +42,7 @@
 
 			<section class="mb-4">
 				<!-- Section Title -->
+				{% include 'dashboard/includes/alert.html' %}
 				{% if posts %}
 				<div class="py-4">
 					<h4>List of Published Articles</h4>
