--- a/templates/base.html
+++ b/templates/base.html
@@ -17,22 +17,22 @@
             VirTips
         {% endblock title %}
     </title>
-    <meta name="title" content="Meta Tags — Preview, Edit and Generate">
-    <meta name="description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
+    <meta name="title" content="{% block meta-title %}Virtips Blog{% endblock %}">
+    <meta name="description" content="{% block meta-desc %}Get different tips every week{% endblock meta-desc %}">
     
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://metatags.io/">
-    <meta property="og:title" content="Meta Tags — Preview, Edit and Generate">
-    <meta property="og:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
-    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="og:type" content="{% block og-type %}website{% endblock og-type %}">
+    <meta property="og:url" content="{% block og-url %}https://virtips.blog{% endblock og-url %}">
+    <meta property="og:title" content="{% block og-title %}Virtips Blog{% endblock %}">
+    <meta property="og:description" content="{% block og-desc %}Get different tips every week{% endblock og-desc %}">
+    <meta property="og:image" content="{% block og-image %}{% endblock og-image %}">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://metatags.io/">
-    <meta property="twitter:title" content="Meta Tags — Preview, Edit and Generate">
-    <meta property="twitter:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
-    <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="twitter:url" content="{% block twitter-url %}https://virtips.blog{% endblock twitter-url %}">
+    <meta property="twitter:title" content="{% block twitter-title %}Virtips Blog{% endblock %}">
+    <meta property="twitter:description" content="{% block twitter-desc %}Get different tips every week{% endblock twitter-desc %}">
+    <meta property="twitter:image" content="{% block twitter-image %}{% endblock twitter-image %}">
     
     <!-- Icons -->
 	<link rel="apple-touch-icon" sizes="120x120" href="{% static 'img/icon/icon-120x120.png' %}">
@@ -58,7 +58,6 @@
 
     <!-- main style -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 </head>
 
 <body>
@@ -204,7 +203,6 @@
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
     <!-- JS Plugins  -->
-    <script src="{% static 'js/ajax-contact.js' %}"></script>
     <script src="{% static 'js/owl.carousel.min.js' %}"></script>
     <script src="{% static 'js/switch.js' %}"></script>
 
