Add featured posts checkbox

--- a/templates/dashboard/blog/write_article.html
+++ b/templates/dashboard/blog/write_article.html
@@ -61,6 +61,10 @@
                                         <label class="my-1 me-2" for="state">Status</label>
                                         {{ form.status }}
                                     </div>
+									<div class="my-2 col-md-6">
+                                        <label class="my-1 me-2" for="state">Featured</label>
+                                        {{ form.featured }}
+                                    </div>
 									<div class="input-group float-start">
 										<div class="my-2 pe-2">
 											<button class="btn btn-success" type="submit" value="PUBLISH">SAVE</button>
