--- a/templates/dashboard/blog/category.html
+++ b/templates/dashboard/blog/category.html
@@ -38,9 +38,10 @@
 				</div>
 			</div>
 			<!-- xxxxxxxxxxxx -->
+			{% include 'dashboard/includes/alert.html' %}
 
 			<!-- Table Card -->
-			<div class="card border-0 shadow mx-auto">
+			<div class="card border-0 shadow mx-auto pt-2">
 				<div class="card-body">
 					<div class="table-responsive">
 						<table class="table table-centered table-nowrap mb-0 rounded" >
