--- a/templates/dashboard/includes/sidebar.html
+++ b/templates/dashboard/includes/sidebar.html
@@ -95,8 +95,8 @@
                     </span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a href="tags.html" class="nav-link d-flex align-items-center justify-content-between">
+            <li class="nav-item {% if '/dashboard/me/add/tag/' == request.path %}active{% endif %}">
+                <a href="{% url 'dashboard:add-tag' %}" class="nav-link d-flex align-items-center justify-content-between">
                     <span>
                         <span class="sidebar-icon">
                             <i class="fas fa-tags"></i>
