--- a/templates/dashboard/auth/login.html
+++ b/templates/dashboard/auth/login.html
@@ -24,11 +24,19 @@
 
 			{% else %}
 				<div class="container">
+					<p class="text-center mb-3">
+						<a href="/" class="d-flex align-items-center justify-content-center">
+							<svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+								<path fill-rule="evenodd" d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z" clip-rule="evenodd"></path>
+							</svg> Back to homepage
+						</a>
+					</p>
 
 					<div class="row justify-content-center form-bg-image" data-background-lg="/static/dashboard/assets/img/illustrations/signin.svg">
 						<div class="col-12 d-flex align-items-center justify-content-center">
 							<div class="bg-white shadow border-0 rounded border-light p-4 p-lg-5 w-100 fmxw-500">
 								<div class="text-center text-md-center mb-4 mt-md-0">
+
 									<h1 class="mb-0 h3">Sign in to our platform</h1>
 								</div>
 								{% include 'dashboard/includes/alert.html' %}
