--- a/templates/dashboard/includes/scripts.html
+++ b/templates/dashboard/includes/scripts.html
@@ -1,5 +1,5 @@
 {% load static %}
-        <script src="{% static 'dashboard/vendor/%40popperjs/core/dist/umd/popper.min.js' %}"></script>
+        <script src="{% static 'dashboard/vendor/@popperjs/core/dist/umd/popper.min.js' %}"></script>
         <script src="{% static 'dashboard/vendor/bootstrap/dist/js/bootstrap.min.js' %}"></script>
         <script src="{% static 'dashboard/vendor/sweetalert2/dist/sweetalert2.min.js' %}"></script>
         <script src="{% static 'dashboard/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js' %}"></script>
