--- a/templates/dashboard/layouts/base_fullscreen.html
+++ b/templates/dashboard/layouts/base_fullscreen.html
@@ -9,7 +9,7 @@
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="120x120" href="/static/assets/img/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/static/assets/img/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon.ico' %}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon/favicon.ico' %}">
         <link rel="manifest" href="/static/assets/img/favicon/site.webmanifest">
         <link rel="mask-icon" href="/static/assets/img/favicon/safari-pinned-tab.svg" color="#ffffff">
         <meta name="msapplication-TileColor" content="#ffffff">
